# oci-prometheus-exporter

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  config.example.yaml  docker-compose.yaml  project.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
ai/: ROADMAP.md  SELF_CHECKLIST.md  activation.txt
context/: CONTRACT.md
docs/: cli.md  configuration.md  deployment.md  metrics.md  oci-namespaces.md
k8s/: configmap.yaml  deployment-apikey.yaml  deployment.yaml  kustomization.yaml  secret-apikey.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
oci_exporter/: __init__.py  __main__.py  collector.py  config.py  metrics.py  server.py
tests/: test_collector.py  test_config.py  test_metrics.py  test_server.py
tools/: git_hook_commit-msg.sh  init-hooks.sh  vault-rootCA-sign-agent.sh  vault-sign-agent.md  vault-sign-agent.sh  vault-sign-agent.yaml
