[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oci-prometheus-exporter"
version = "0.1.0"
description = "Prometheus exporter for Oracle Cloud Infrastructure (OCI) metrics"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "oci>=2.100.0",
    "prometheus-client>=0.19.0",
    "pyyaml>=6.0",
]

[project.scripts]
oci-exporter = "oci_exporter.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["oci_exporter"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["oci_exporter"]
omit = ["tests/*"]
